Portfolio calculation fixes